dev/04.drone/runner/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drone-runner
  namespace: dev
  labels:
    app.kubernetes.io/name: drone-runner
    release: drone
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: drone-runner
      release: drone
  template:
    metadata:
      namespace: dev
      labels:
        app.kubernetes.io/name: drone-runner
        release: drone
    spec:
      containers:
      - name: drone-runner
        image: drone/drone-runner-kube:1.0.0-rc.2
        ports:
        - containerPort: 3000
