dev/04.drone/runner/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: drone-runner
  namespace: dev
  labels:
    release: drone
spec:
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
  selector:
    app.kubernetes.io/name: drone-runner
